# business-chatbot

./: .gitignore  README.md  render.yaml
backend/: README.md  graph.ipynb  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  graph.py  state.py
backend/app/api/: __init__.py  routes.py
backend/app/business_chatbot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/app/config/: __init__.py  settings.py
backend/app/models/: __init__.py  chat.py
backend/app/retrieval/: __init__.py  document_loader.py  service.py  vector_store.py
backend/app/services/: __init__.py  discord.py  lead_tracker.py  scheduling.py  session_memory.py
backend/tests/: test_health.py
docs/: SETUP.md
widget/: .eslintrc.cjs  README.md  package.json  tsconfig.json
widget/src/: index.ts
