[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "business-chatbot-backend"
version = "0.1.0"
description = "LangGraph-powered backend for the AI webchat agent."
authors = [
    { name = "Business Chatbot Team" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn[standard]>=0.30.0",
    "langchain-core>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "langgraph>=0.1.21",
    "pydantic>=2.12.4",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "tenacity>=9.1.2",
    "pyjwt>=2.10.1",
    "openai>=2.7.2",
    "chromadb>=1.3.4,<1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.27.0",
    "ruff>=0.14.4",
    "jupyter>=1.1.1"
]

[tool.setuptools.packages.find]
where = ["app"]
